<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragment.MemberDetailsFragment">

    <data>
        <variable
            name="memberDetailsViewModel"
            type="com.example.parliamentapplication.viewmodel.MemberDetailsViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/designation"
                android:text="@{memberDetailsViewModel.member.minister ? `Minister` : `Parliament Member`}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                />

            <TextView
                android:id="@+id/name"
                android:text="@{memberDetailsViewModel.member.fullName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/constituency"
                android:text='@{"Constituency: " + memberDetailsViewModel.member.constituency}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/age"
                android:text='@{"Born Year: " +Integer.toString(memberDetailsViewModel.member.bornYear)}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/party"
               android:text="@{`Party: ` +memberDetailsViewModel.member.party}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textAlignment="center"
                />

            <ImageView
                android:id="@+id/member_image"
                android:layout_width="229dp"
                android:layout_height="220dp"
                android:contentDescription="@string/image_of_member"
                android:paddingTop="16dp"
                android:src="@drawable/ic_launcher_foreground"
                app:imageUrl="@{memberDetailsViewModel.member.picture}" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageButton
                    android:id="@+id/like_btn"
                    android:layout_width="101dp"
                    android:layout_height="72dp"
                    android:layout_marginEnd="100dp"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:contentDescription="@string/like_button"
                    android:scaleType="fitCenter"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    app:srcCompat="@drawable/like"

                    />

                <ImageButton
                    android:id="@+id/dislike_btn"
                    android:layout_width="80dp"
                    android:layout_height="76dp"
                    android:layout_marginStart="100dp"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:contentDescription="@string/dislike_btn"
                    android:scaleType="fitCenter"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    app:srcCompat="@drawable/dislike" />

            </LinearLayout>

            <TextView
                android:id="@+id/rating_score"
                android:text="@string/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/add_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_comment_btn"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>
    </ScrollView>
</layout>